--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+xca 2.2.0 Wed Jan 29 2020
+
  * Switch to MSI installer
  * Close #129 Unattended Installation
  * Rename HTTPS templates to TLS and support KU/EKU extensions needed by OpenVPN
