--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+xca 2.3.0 Wed Apr 29 2020
+
  * Close #191 OID LN differs warning popups at startup
  * Close #189 Database compaction #189
  * Improve PKCS11 library loading for portable app
