--- a/changelog
+++ b/changelog
@@ -471,7 +471,7 @@ xca 0.6.0 Fri Mar 16 2007
   * make QA serial a compile time option
   * fix date generation and warn if generalized time is used
   * autodetect and load any type of PEM files
-  * fix version number in exported *.xca template
+  * fix version number in exported .xca template
   * fix import of older XCA templates
   * add support for predefined templates as there was in 0.5.1
   * fix cmdline import of crypto items
@@ -739,7 +739,7 @@ xca 0.2.3 Wed Sep 4 2002
   * dialogboxes are resizeable
   * extended keyusage added to v3 extensions when creating new cert
   * all dialogs translated to english
-  * no more images in *.ui files
+  * no more images in .ui files
 
 xca 0.2.2 Thu Jul 18 2002
 
