--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -17,3 +17,36 @@ if (UNIX)
 	DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/i18n
   )
 endif()
+
+macro(PO_language lang)
+  add_custom_command(
+	OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/xca_${lang}X.ts"
+	COMMAND ${LCONVERT} -if po -of ts
+		-i "${CMAKE_CURRENT_SOURCE_DIR}/${lang}.po"
+		-o "${CMAKE_CURRENT_SOURCE_DIR}/xca_${lang}X.ts"
+	DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${lang}.po"
+  )
+  list(APPEND POTS "${CMAKE_CURRENT_SOURCE_DIR}/xca_${lang}.ts")
+endmacro()
+
+find_program(LCONVERT lconvert)
+
+if (LCONVERT)
+  add_custom_command(
+	OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/xca.pot"
+	COMMAND ${LCONVERT} -if ts -of po
+		-i "${CMAKE_CURRENT_SOURCE_DIR}/xca.ts"
+		-o "${CMAKE_CURRENT_SOURCE_DIR}/xca.pot"
+	DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/xca.ts"
+	COMMENT "Update POT file"
+  )
+  qt5_create_translation(CQM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
+  PO_language(tr)
+  PO_language(fr)
+  PO_language(sk)
+endif()
+
+add_custom_target(trans DEPENDS ${CQM_FILES}
+		"${CMAKE_CURRENT_SOURCE_DIR}/xca.pot"
+)
+add_custom_target(po2ts DEPENDS ${POTS})
