Add support for Qt6
XCA now supports both, Qt6 and Qt5 down to Qt-5.2

Use CMAKE_PREFIX_PATH to point to the QT dompiler directory like
$ cmake -B build -DCMAKE_PREFIX_PATH=$HOME/6.3.1/gcc_64

--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -28,7 +28,11 @@ string(APPEND WIX_LANG_CONTENT
 
 WixFile(${D}/language.wxs ${WIX_LANG_CONTENT})
 
-qt5_add_translation(QM_FILES ${TS_FILES})
+if (${QT_VERSION} VERSION_LESS 6.0.0)
+  qt5_add_translation(QM_FILES ${TS_FILES})
+else()
+  qt_add_translation(QM_FILES ${TS_FILES})
+endif()
 list(APPEND APP_RESOURCES ${QM_FILES})
 
 add_custom_target(translations DEPENDS ${QM_FILES})
