Fix installation of documentation
We need the whole directory, including the _static and _sources
sub-directories.

Also silence the QM generation. It was very garrulous.

--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -29,9 +29,9 @@ string(APPEND WIX_LANG_CONTENT
 WixFile(${D}/language.wxs ${WIX_LANG_CONTENT})
 
 if (${QT_VERSION} VERSION_LESS 6.0.0)
-  qt5_add_translation(QM_FILES ${TS_FILES})
+  qt5_add_translation(QM_FILES ${TS_FILES} OPTIONS -silent)
 else()
-  qt_add_translation(QM_FILES ${TS_FILES})
+  qt_add_translation(QM_FILES ${TS_FILES} OPTIONS -silent)
 endif()
 list(APPEND APP_RESOURCES ${QM_FILES})
 
