Fixup for a548227a073: install translation files again.

--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -37,6 +37,7 @@ else()
   add_custom_target(trans DEPENDS xca_lupdate "${S}/xca.pot")
 endif()
 list(APPEND APP_RESOURCES ${QM_FILES})
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${QM_FILES})
 
 if (UNIX AND NOT APPLE)
   install(FILES ${QM_FILES}
