--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -2,7 +2,7 @@
 set(S "${PROJECT_SOURCE_DIR}/lang")
 set(D "${PROJECT_BINARY_DIR}")
 
-list(APPEND XCA_QT_LANGUAGES de fr ja pl ru tr es it sk)
+list(APPEND XCA_QT_LANGUAGES de fr ja pl ru tr es it sk bg)
 list(APPEND XCA_LANGUAGES id hr nl pt_BR zh_CN fa ${XCA_QT_LANGUAGES})
 
 foreach(lang ${XCA_LANGUAGES})
