--- a/changelog
+++ b/changelog
@@ -1,4 +1,9 @@
-
+ * Close #518: Export certificates for ovpn file
+ * Close #512 #474 #481 #506 #509: SHA1 based MAC for PKCS12
+ * Close #458 #511 #503 #500 #494 #484 #482 #475: Support legacy keys
+   and automatically transform them if possible.
+ * Close #493: Renew Certificate freeze XCA
+ * Close #477: paste an encrypted private key results in a crash
  * Fix crash when deleting CA certificates
  * Close #480: add flatpak build information and github action
  * Close #402: Subject Alternative Name not filled by all CN
