--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+ * Close #287: template don't save/restore correctly
+ * Close #351: a1int::getLong() doesn't handle all error cases
+ * Close #401: Write PEM data to a file especially for crlgen
+ * Close #548: export certificate: error using child folder
+ * Close #391: hide expired and revoked certificates
+
 xca 2.7.0 Tue Aug 27 2024
 -------------------------
 
