Check supported minimum QT version 5.10.1

--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -26,8 +26,12 @@ string(APPEND WIX_LANG_CONTENT
 )
 
 WixFile(${D}/language.wxs ${WIX_LANG_CONTENT})
-if (${QT_VERSION} VERSION_LESS 6.0.0 )
-  qt5_add_translation(QM_FILES ${TS_FILES} OPTIONS -silent)
+if (${QT_VERSION} VERSION_LESS 6.0.0)
+  if (${QT_VERSION} VERSION_LESS 5.12.0)
+    qt5_add_translation(QM_FILES ${TS_FILES})
+  else()
+    qt5_add_translation(QM_FILES ${TS_FILES} OPTIONS -silent)
+  endif()
   message(STATUS "Updating translations from source with 'lupdate' only supprted with QT6")
   target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${QM_FILES})
 else()
